{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 179,
  "lineage": "deb42f61-86db-0946-ea01-334e6878080d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:109450601735:instance/i-0551e5c11fe6789ee",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0551e5c11fe6789ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0555120a0dcb1fdf9",
            "private_dns": "ip-10-10-3-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-098eebc219ba988dc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0713c53e250b27e0b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6bd4cec31457c0d",
            "tags": {
              "Name": "fcj-private-instance"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-private-instance",
              "Owner": "Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0713c53e250b27e0b"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_ami.ami_amazon_linux",
            "module.aws_vpc.aws_security_group.private_sg",
            "module.aws_vpc.aws_security_group.public_sg",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_vpc.vpc",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440d3b780d96b29d",
            "arn": "arn:aws:ec2:us-east-1:109450601735:instance/i-0e05782077132f218",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e05782077132f218",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5c40e54ddb39c78",
            "private_dns": "ip-10-10-0-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.179",
            "public_dns": "ec2-3-216-95-103.compute-1.amazonaws.com",
            "public_ip": "3.216.95.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cad1d2d61143b15b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-098c7203b60852614"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad488e80f2f863f2",
            "tags": {
              "Name": "fcj-public-instance"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-public-instance",
              "Owner": "Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098c7203b60852614"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "data.aws_ami.ami_amazon_linux",
            "local_file.save_key",
            "module.aws_vpc.aws_security_group.public_sg",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0246070f15e1facdb",
            "association_id": "eipassoc-0badc7499ceb97888",
            "domain": "vpc",
            "id": "eipalloc-0246070f15e1facdb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0558fd6bdb5f9fa19",
            "private_dns": "ip-10-10-1-49.ec2.internal",
            "private_ip": "10.10.1.49",
            "public_dns": "ec2-54-160-7-232.compute-1.amazonaws.com",
            "public_ip": "54.160.7.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fcj-nat-gw-eip"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-nat-gw-eip",
              "Owner": "Dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:internet-gateway/igw-02612affea8ff8472",
            "id": "igw-02612affea8ff8472",
            "owner_id": "109450601735",
            "tags": {
              "Name": "fcj-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-igw",
              "Owner": "Dev"
            },
            "vpc_id": "vpc-02105fe403968250e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0246070f15e1facdb",
            "association_id": "eipassoc-0badc7499ceb97888",
            "connectivity_type": "public",
            "id": "nat-0bff573f78deeec8e",
            "network_interface_id": "eni-0558fd6bdb5f9fa19",
            "private_ip": "10.10.1.49",
            "public_ip": "54.160.7.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c1cc911c0c6cd5ea",
            "tags": {
              "Name": "fcj-nat-gw"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-nat-gw",
              "Owner": "Dev"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:route-table/rtb-05ec4ed1abdb6bffa",
            "id": "rtb-05ec4ed1abdb6bffa",
            "owner_id": "109450601735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bff573f78deeec8e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fcj-private-rtb"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-private-rtb",
              "Owner": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02105fe403968250e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:route-table/rtb-04650b2ad7e0d9961",
            "id": "rtb-04650b2ad7e0d9961",
            "owner_id": "109450601735",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02612affea8ff8472",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fcj-public-rtb"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-public-rtb",
              "Owner": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02105fe403968250e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0270cd95b7f9d84fe",
            "route_table_id": "rtb-05ec4ed1abdb6bffa",
            "subnet_id": "subnet-05d0504a585958bc7"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.rtb_private",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a7bbb62bcfe239a",
            "route_table_id": "rtb-05ec4ed1abdb6bffa",
            "subnet_id": "subnet-0c6bd4cec31457c0d"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.nat_eip",
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_nat_gateway.nat_gw",
            "module.aws_vpc.aws_route_table.rtb_private",
            "module.aws_vpc.aws_subnet.private_subnet",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036ffe93c99b94167",
            "route_table_id": "rtb-04650b2ad7e0d9961",
            "subnet_id": "subnet-0ad488e80f2f863f2"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.rtb_public",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaaced7e1412d894",
            "route_table_id": "rtb-04650b2ad7e0d9961",
            "subnet_id": "subnet-0c1cc911c0c6cd5ea"
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.igw",
            "module.aws_vpc.aws_route_table.rtb_public",
            "module.aws_vpc.aws_subnet.public_subnet",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:security-group/sg-0713c53e250b27e0b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0713c53e250b27e0b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098c7203b60852614"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fcj-private-sg",
            "name_prefix": "",
            "owner_id": "109450601735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fcj-private-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-private-sg",
              "Owner": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02105fe403968250e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_security_group.public_sg",
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:security-group/sg-098c7203b60852614",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c7203b60852614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fcj-public-sg",
            "name_prefix": "",
            "owner_id": "109450601735",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fcj-public-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-public-sg",
              "Owner": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-02105fe403968250e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:subnet/subnet-05d0504a585958bc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0504a585958bc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109450601735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fcj-private-subnet-0"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-private-subnet-0",
              "Owner": "Dev"
            },
            "vpc_id": "vpc-02105fe403968250e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:subnet/subnet-0c6bd4cec31457c0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6bd4cec31457c0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109450601735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fcj-private-subnet-1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-private-subnet-1",
              "Owner": "Dev"
            },
            "vpc_id": "vpc-02105fe403968250e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:subnet/subnet-0ad488e80f2f863f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad488e80f2f863f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109450601735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fcj-public-subnet-0"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-public-subnet-0",
              "Owner": "Dev"
            },
            "vpc_id": "vpc-02105fe403968250e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:subnet/subnet-0c1cc911c0c6cd5ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1cc911c0c6cd5ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "109450601735",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fcj-public-subnet-1"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-public-subnet-1",
              "Owner": "Dev"
            },
            "vpc_id": "vpc-02105fe403968250e"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:109450601735:vpc/vpc-02105fe403968250e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c5af27b4fe56701d",
            "default_route_table_id": "rtb-0ceb557bdfb2c23ac",
            "default_security_group_id": "sg-0884b32abdf617c2f",
            "dhcp_options_id": "dopt-05023575e2d064ecb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02105fe403968250e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ceb557bdfb2c23ac",
            "owner_id": "109450601735",
            "tags": {
              "Name": "fcj-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "fcj-vpc",
              "Owner": "Dev"
            }
          }
        }
      ]
    }
  ]
}